--- a/src/main/resources/templates/itemsAdd.html
+++ b/src/main/resources/templates/itemsAdd.html
@@ -29,7 +29,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img th:src="@{/images/logo.png}" src="../static/images/logo.png" width="auto" height="40"
                  class="d-inline-block align-top" alt=""/>
         </a>
@@ -42,10 +42,10 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
+                    <a class="nav-link" th:href="@{/admin}" href="#">Admin-home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
+                    <a class="nav-link" th:href="@{/logout}" href="#">Logout</a>
                 </li>
 
             </ul>
@@ -53,6 +53,7 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
     <h3>Add a new Item</h3>
     <form th:action="@{/admin/items/add}" method="post" th:object="${itemDTO}" enctype="multipart/form-data">
@@ -99,7 +100,7 @@
                 <div class="form-group">
                     <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/itemImages/' + itemDTO.imageUrl}}" style="margin-top: 20px" alt=" ">
                 </div>
-                <input type="hidden" name="imgName" th:value="${itemDTO.imageUrl}">
+                <input type="hidden" name="imageUrl" th:value="${itemDTO.imageUrl}">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
