--- a/src/main/resources/templates/viewItem.html
+++ b/src/main/resources/templates/viewItem.html
@@ -30,7 +30,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img
                     th:src="@{/images/logo.png}"
                     src="../static/images/logo.png"
@@ -56,10 +56,10 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
+                    <a class="nav-link" th:href="@{/}" href="#">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
+                    <a class="nav-link" th:href="@{/shop}" href="#">Shop</a>
                 </li>
                 <li class="nav-item active">
                     <a
@@ -67,7 +67,7 @@
                             sec:authorize="isAnonymous()"
                             th:href="@{/login}"
                             href="#"
-                    >login</a
+                    >Login</a
                     >
                 </li>
                 <li class="nav-item active">
@@ -76,11 +76,11 @@
                             sec:authorize="isAuthenticated()"
                             th:href="@{/logout}"
                             href="#"
-                    >logout</a
+                    >Logout</a
                     >
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
+                    <a class="nav-link" th:href="@{/cart}" href="#">Cart</a>
                 </li>
                 <li class="nav-item active">
                     <span class="nav-link" th:text="${cartCount}"></span>
